--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
     - CIBW_SKIP=pp*
     - CIBW_TEST_REQUIRES=nose
     - CIBW_TEST_COMMAND="nosetests {project}/tests"
-    - TWINE_USERNAME=joerick
+    - TWINE_USERNAME=__token__
     # Note: TWINE_PASSWORD is set in Travis settings
 
 script:
@@ -24,5 +24,5 @@ script:
   - |
     if [[ $TRAVIS_TAG ]]; then
       python -m pip install twine
-      python -m twine upload wheelhouse/*.whl
+      python -m twine upload --repository testpypi wheelhouse/*.whl
     fi
