--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
     CIBW_SKIP: pp*
     CIBW_TEST_REQUIRES: nose
     CIBW_TEST_COMMAND: "nosetests {project}\\tests"
-    TWINE_USERNAME: joerick
+    TWINE_USERNAME: asfaltboy
     # Note: TWINE_PASSWORD is set in Appveyor settings
 
 init:
