Ensure we can install cibuildwheel on py 3.8
Appveyor runs 2.7 by default on windows, which raises an error
with SSL certificates same as for example this issue:
https://github.com/joerick/cibuildwheel/issues/456

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,11 @@ environment:
     TWINE_USERNAME: joerick
     # Note: TWINE_PASSWORD is set in Appveyor settings
 
+init:
+- set PATH=C:\Python38;C:\Python38\Scripts;%PATH%
+
 build_script:
-  - pip install cibuildwheel
+  - python -m pip install cibuildwheel
   - cibuildwheel --output-dir wheelhouse
   - ps: >-
       if ($env:APPVEYOR_REPO_TAG -eq "true") {
