--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,12 @@
 environment:
   global:
-    CIBW_SKIP: pp*
     CIBW_TEST_REQUIRES: nose
     CIBW_TEST_COMMAND: "nosetests {project}\\tests"
     TWINE_USERNAME: joerick
     # Note: TWINE_PASSWORD is set in Appveyor settings
 
-init:
-- set PATH=C:\Python38;C:\Python38\Scripts;%PATH%
-
 build_script:
-  - python -m pip install cibuildwheel
+  - pip install https://github.com/joerick/cibuildwheel/archive/master.zip
   - cibuildwheel --output-dir wheelhouse
   - ps: >-
       if ($env:APPVEYOR_REPO_TAG -eq "true") {
