squash! Fix windows install cibuildwheel on py 3.8
Pip warning is sent to stderr, at which point powershell considers
this an exit condition and fails the "script" (the part after ps: >-)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ build_script:
   - cibuildwheel --output-dir wheelhouse
   - ps: >-
       if ($env:APPVEYOR_REPO_TAG -eq "true") {
-        python -m pip install twine
+        python -m pip install --disable-pip-version-check twine
         python -m twine upload (resolve-path wheelhouse\*.whl)
       }
 
